Fixing social media icons on mobile

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -37,13 +37,16 @@
 .social-icons {
     list-style-type: none;
     margin: 0;
+    margin-bottom: 48px;
     
     @media ($breakpoint-medium) {
         float: right;
+        margin: 0;
     }
     
     @media ($breakpoint-large) {
         margin-right: 16px;
+        margin: 0;
     }
 }
 
